assets/css/header/styles/header-1.css
/*
** The Header Media Queries **
** Tweak as per your needs **
*/

#main{
  padding-top: 8%;
}
#hamburger{
  width: 40px;
  height: 45px;
}

.brand {
  font-weight: bold;
  font-size: 40px;
  margin: auto;
}

@media (max-width: 600px){
  .brand {
    position: relative;
    font-weight: bold;
    font-size: 40px;
    top: -10px;
  }
}

.site-header {
  /* position: relative; */
  position: fixed;
  background-color: white;
  border-radius: 1.5em;
  box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
  z-index: 1;
 }

  @media (max-width: 900px){
    #main{
      padding-top: 20%;
    }
  }
  @media (max-width: 600px){
    .site-header{
      position: fixed;
      height: 65px;
     -webkit-backface-visibility: hidden;
    }
  }

.site-header__wrapper {
  padding-top: 1rem;
  padding-bottom: 1rem;
  margin: auto;
 }
  @media (min-width: 600px) {
    .site-header__wrapper {
      display: flex;
      justify-content: space-between;
      align-items: center;
      padding-top: 0;
      padding-bottom: 0; } }
@media (min-width: 600px) {
  .nav__wrapper {
    display: flex;
    margin: auto;
    } }

@media (max-width: 599px) {
  .nav__wrapper {
    margin: auto;
    position: absolute;
    top: 100%;
    right: 0;
    left: 0;
    z-index: -1;
    background-color: white;
    visibility: visible;
    opacity: 0;
    overflow: visible !important;
    transform: translateY(-100%);
    transition: transform 0.3s ease-out, opacity 0.3s ease-out; }
    .nav__wrapper.active {
      border-radius: 1.5em;
      visibility: visible;
      opacity: 1;
      transform: translateY(0); } }

/* NAV__WRAPPER_PROJECT */
.nav__wrapper__project {
  margin: auto;
  position: absolute;
  top: 100%;
  right: 0;
  left: 0;
  z-index: -1;
  background-color: white;
  visibility: visible;
  opacity: 0;
  overflow: visible !important;
  transform: translateY(-100%);
  transition: transform 0.3s ease-out, opacity 0.3s ease-out; }
    .nav__wrapper__project.active {
    border-radius: 1.5em;
    visibility: visible;
    opacity: 1;
    transform: translateY(0); }

.nav__toggle__proj {
  /* display: block;
  position: absolute;
  right: 1rem;
  top: 1rem;
  */
   }

.nav__item a {
  display: block;
  padding: 1.5rem 1rem;
 }

.nav__toggle {
  display: none; }
  @media (max-width: 599px) {
    .nav__toggle {
      display: block;
      position: absolute;
      right: 1rem;
      top: 1rem; } }

